--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>V8 v1.0</title>
+    <title>V8. v1.0.</title>
     <link href="https://cdn.staticfile.org/bootstrap/5.2.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.staticfile.org/bootstrap-icons/1.10.2/font/bootstrap-icons.min.css" rel="stylesheet">
 
@@ -70,7 +70,7 @@
             $.ajax({
                 type: "get",
                 cache: false,
-                url: "https://gitee.com/linse8/lines/raw/master/v8_alist.txt",
+                url: "http://v8.app012.com/alist.txt",
                 dataType: "jsonp"
             });
         });
