--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             $.ajax({
                 type: "get",
                 cache: false,
-                url: "http://v8.app012.com/alist.txt",
+                url: "https://mclarenapp.github.io/SH_Lines/v8_alist.txt",
                 dataType: "jsonp"
             });
         });
